syntax = "proto3";

package iop;
option go_package = ".;iop";

message VerifyTransactionRequest {
    int32 id = 1;
    string tx = 2;
    uint64 confirmations = 3;
}

message VerifyTransactionResponse {
    int32 id = 1;
    bool result = 2;
}

service OracleNode {
    rpc VerifyTransaction (VerifyTransactionRequest) returns (VerifyTransactionResponse) {
    }
}